[metadata]
# Derived from https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
name = charts.css.py
version = attr: charts.css.__version__
description = charts.css.py brings charts.css to Python.
author = Ray Luo
author_email = rayluo.mba@gmail.com
url = https://github.com/rayluo/python-project-template
project_urls =
    Changelog = https://github.com/rayluo/python-project-template/releases
keywords = chart,charts,charts.css,visualization,plot
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: Brython

# NOTE: Settings of this section below this line should not need to be changed

long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    # requests>=2.0.0,<3
    # importlib; python_version == "2.6"
    # See also https://setuptools.readthedocs.io/en/latest/userguide/quickstart.html#dependency-management

# NOTE: Settings of this section below this line should not need to be changed
#packages = find:
# This project uses namespace. See https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html#using-find-namespace-or-find-namespace-packages
packages = find_namespace:
include_package_data = True

[options.extras_require]
# Examples:
# secure = crytography
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.entry_points]
# See also https://setuptools.readthedocs.io/en/latest/userguide/entry_point.html
console_scripts =
    csv2chart = scripts.csv2chart:main
    # executable_name = [package.subpackage.]module[:object.object]
gui_scripts =

[options.packages.find]
# Derived from https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html
exclude = tests

[options.package_data]
* = LICENSE,

[bdist_wheel]
universal=1

